--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Hyperspace</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-
+<div class="scene">
+  <div class="wrap">
+      <div class="wall wall-right"></div>
+      <div class="wall wall-left"></div>   
+      <div class="wall wall-top"></div>
+      <div class="wall wall-bottom"></div> 
+      <div class="wall wall-back"></div>    
+  </div>
+  <div class="wrap">
+      <div class="wall wall-right"></div>
+      <div class="wall wall-left"></div>   
+      <div class="wall wall-top"></div>
+      <div class="wall wall-bottom"></div>   
+      <div class="wall wall-back"></div>    
+  </div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
